-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2016 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.

For change history for MOST, see most/docs/CHANGES.

Changes since 5.1
-----------------

2/29/16
    - Added option to call scale_load() with full case struct, with
      'cost' field in opt to indicate when to include cost scaling.

2/22/16
    - Add major new feature: MATPOWER Optimal Scheduling Tool (MOST).
      See docs/MOST-manual.pdf for details.

2/18/16
    - Updated code from 9/23/16 to turn off pesky CPLEX warnings to
      included CPLEX 12.6.3.

2/12/16
    - Added Release History section to Appendix of manual.

1/29/16
    - Added option to call makePTDF(), makeB(), and makeBdc() with
      mpc struct instead of individual baseMVA, bus, branch args.
      Suggested by Alberto Lamadrid.

1/26/16
    - Introduced work-around and warning for crashes caused by strange
      behavior from Matlab's ver() function when MATPOWER (or any other
      3rd party toolbox with a Contents.m) is installed in a directory on
      the Matlab path named 'matlab' or 'optim' (both case insensitive).

1/15/16
    - Added feval_w_path() function for evaluating functions located at
      a specified path, outside of the Matlab path.

1/14/16
    - Added tests for loadcase() for m-file cases outside the Matlab path.

1/6/16
    - Added apply_changes() and idx_ct() to implement general method for
      applying modifications to an existing MATPOWER case.

11/5/15
    - Use voltage dependent loads in both base and target injections
      to define continuation power flow transfer. Should fix issue with
      calculation of final loads.

10/15/15
    - Modified t_is() to handle matrix inputs of dimension greater
      than two.