@@ -15,7 +15,7 @@ if nargin < 1
     quiet = 0;
 end
 
-t_begin(9, quiet);
+t_begin(10, quiet);
 
 %% set up some structs
 D = struct( ...
@@ -160,6 +160,36 @@ E = struct( ...
         'h', 'oops'));
 t_ok(isequal(DS, E), t);
 
+
+t = 'default, with struct overwriting non-struct field';
+D2 = D;
+D2.pi = pi;
+S3 = S;
+S3.pi = struct('apple', 'yes', 'mud', 'no');
+E = struct( ...
+    'a', 10, ...
+    'b', struct( ...
+        'd', [2;3], ...
+        'e', 4, ...
+        'x', 100, ...
+        'y', 200), ...
+    'c', struct( ...
+        'f', {{'hello', 'world'}}, ...
+        'g', 'chau', ...
+        'h', 'oops'), ...
+    'pi', struct( ...
+        'apple', 'yes', ...
+        'mud', 'no'), ...
+    'u', struct( ...
+        'v', -1, ...
+        'w', -2 ) );
+DS = nested_struct_copy(D2, S3);
+t_ok(isequal(DS, E), t);
+
+% D2
+% S3
+% DS
+% E
 
 % DS
 % DS.b
